adapt classes to new structure